tests/ui/parser/issues/issue-87217-keyword-order/wrong-unsafe-abi.stderr
error: expected `fn`, found keyword `unsafe`
  --> $DIR/wrong-unsafe-abi.rs:9:12
   |
LL | extern "C" unsafe fn test() {}
   |            ^^^^^^ expected `fn`
   |
   = note: keyword order for functions declaration is `pub`, `default`, `const`, `async`, `unsafe`, `extern`
help: `unsafe` must come before `extern "C"`
   |
LL - extern "C" unsafe fn test() {}
LL + unsafe extern "C" fn test() {}
   |

error: aborting due to 1 previous error

